// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetch info by ip address 73.202.174.69 1`] = `
Object {
  "city": "San Francisco",
  "country": "United States",
  "country_code": "US",
  "datetime": Object {
    "date": "01/15/2018",
    "date_time": "01/15/2018 21:10:11",
    "date_time_txt": "Monday, January 15, 2018 21:10:11",
    "date_time_wti": "Mon, 15 Jan 2018 21:10:11 -0800",
    "date_time_ymd": "2018-01-15T21:10:11-08:00",
    "day": "15",
    "day_abbr": "Mon",
    "day_full": "Monday",
    "day_wilz": "15",
    "dst": "false",
    "dst_observes": "true",
    "hour_12_wilz": "09",
    "hour_12_wolz": "9",
    "hour_24_wilz": "21",
    "hour_24_wolz": "21",
    "hour_am_pm": "pm",
    "minutes": "10",
    "month": "1",
    "month_abbr": "Jan",
    "month_days": "31",
    "month_full": "January",
    "month_wilz": "01",
    "offset_gmt": "-08:00",
    "offset_hours": "-8",
    "offset_minutes": "-480",
    "offset_seconds": "-28800",
    "offset_tzab": "PST",
    "offset_tzid": "America/Los_Angeles",
    "seconds": "11",
    "time": "21:10:11",
    "timeday_gen": "evening",
    "timeday_spe": "evening",
    "week": "03",
    "year": "2018",
    "year_abbr": "18",
  },
  "ip": "73.202.174.69",
  "location": "37.7957,-122.4209",
  "postal": "94109",
  "state": "California",
  "state_code": "CA",
  "timezone": Object {
    "capital": "Washington",
    "continent": "NA",
    "country_code": "US",
    "country_name": "United States of America",
    "currency_alpha_code": "USD",
    "currency_code": "840",
    "currency_country_name": "UNITED STATES",
    "currency_minor_unit": "2",
    "currency_name": "US Dollar",
    "ds": "USA",
    "edgar": "",
    "fifa": "USA",
    "fips": "US",
    "geoname_id": "6252001",
    "gual": "259",
    "id": "America/Los_Angeles",
    "independent": "Yes",
    "ioc": "USA",
    "iso3166_1_alpha_2": "US",
    "iso3166_1_alpha_3": "USA",
    "itu": "USA",
    "languages": "en-US,es-US,haw,fr",
    "location": "34.05222,-118.24278",
    "marc": "xxu",
    "phone_prefix": "1",
    "tld": ".us",
    "un_m49_code": "840",
    "wmo": "US",
  },
}
`;

exports[`fetch info by ip address 174.215.17.217 1`] = `
Object {
  "city": null,
  "country": "United States",
  "country_code": "US",
  "datetime": null,
  "ip": "174.215.17.217",
  "location": "37.751,-97.822",
  "postal": null,
  "state": null,
  "state_code": null,
  "timezone": null,
}
`;

exports[`fetch info by ip address 185.86.151.11 1`] = `
Object {
  "city": "London",
  "country": "United Kingdom",
  "country_code": "GB",
  "datetime": Object {
    "date": "01/16/2018",
    "date_time": "01/16/2018 05:10:10",
    "date_time_txt": "Tuesday, January 16, 2018 05:10:10",
    "date_time_wti": "Tue, 16 Jan 2018 05:10:10 +0000",
    "date_time_ymd": "2018-01-16T05:10:10+00:00",
    "day": "16",
    "day_abbr": "Tue",
    "day_full": "Tuesday",
    "day_wilz": "16",
    "dst": "false",
    "dst_observes": "true",
    "hour_12_wilz": "05",
    "hour_12_wolz": "5",
    "hour_24_wilz": "05",
    "hour_24_wolz": "5",
    "hour_am_pm": "am",
    "minutes": "10",
    "month": "1",
    "month_abbr": "Jan",
    "month_days": "31",
    "month_full": "January",
    "month_wilz": "01",
    "offset_gmt": "+00:00",
    "offset_hours": "0",
    "offset_minutes": "0",
    "offset_seconds": "0",
    "offset_tzab": "GMT",
    "offset_tzid": "Europe/London",
    "seconds": "10",
    "time": "05:10:10",
    "timeday_gen": "night",
    "timeday_spe": "late_night",
    "week": "03",
    "year": "2018",
    "year_abbr": "18",
  },
  "ip": "185.86.151.11",
  "location": "51.5142,-0.0931",
  "postal": "EC2V",
  "state": "England",
  "state_code": "ENG",
  "timezone": Object {
    "capital": "London",
    "continent": "EU",
    "country_code": "GB",
    "country_name": "United Kingdom of Great Britain and Northern Ireland",
    "currency_alpha_code": "GBP",
    "currency_code": "826",
    "currency_country_name": "UNITED KINGDOM",
    "currency_minor_unit": "2",
    "currency_name": "Pound Sterling",
    "ds": "GB",
    "edgar": "X0",
    "fifa": "ENG,NIR,SCO,WAL",
    "fips": "UK",
    "geoname_id": "2635167",
    "gual": "256",
    "id": "Europe/London",
    "independent": "Yes",
    "ioc": "GBR",
    "iso3166_1_alpha_2": "GB",
    "iso3166_1_alpha_3": "GBR",
    "itu": "G",
    "languages": "en-GB,cy-GB,gd",
    "location": "51.50833,-0.12528",
    "marc": "xxk",
    "phone_prefix": "44",
    "tld": ".uk",
    "un_m49_code": "826",
    "wmo": "UK",
  },
}
`;

exports[`fetch info by ip address 204.148.101.50 1`] = `
Object {
  "city": "San Francisco",
  "country": "United States",
  "country_code": "US",
  "datetime": Object {
    "date": "01/15/2018",
    "date_time": "01/15/2018 21:10:10",
    "date_time_txt": "Monday, January 15, 2018 21:10:10",
    "date_time_wti": "Mon, 15 Jan 2018 21:10:10 -0800",
    "date_time_ymd": "2018-01-15T21:10:10-08:00",
    "day": "15",
    "day_abbr": "Mon",
    "day_full": "Monday",
    "day_wilz": "15",
    "dst": "false",
    "dst_observes": "true",
    "hour_12_wilz": "09",
    "hour_12_wolz": "9",
    "hour_24_wilz": "21",
    "hour_24_wolz": "21",
    "hour_am_pm": "pm",
    "minutes": "10",
    "month": "1",
    "month_abbr": "Jan",
    "month_days": "31",
    "month_full": "January",
    "month_wilz": "01",
    "offset_gmt": "-08:00",
    "offset_hours": "-8",
    "offset_minutes": "-480",
    "offset_seconds": "-28800",
    "offset_tzab": "PST",
    "offset_tzid": "America/Los_Angeles",
    "seconds": "10",
    "time": "21:10:10",
    "timeday_gen": "evening",
    "timeday_spe": "evening",
    "week": "03",
    "year": "2018",
    "year_abbr": "18",
  },
  "ip": "204.148.101.50",
  "location": "37.7749,-122.4194",
  "postal": "94119",
  "state": "California",
  "state_code": "CA",
  "timezone": Object {
    "capital": "Washington",
    "continent": "NA",
    "country_code": "US",
    "country_name": "United States of America",
    "currency_alpha_code": "USD",
    "currency_code": "840",
    "currency_country_name": "UNITED STATES",
    "currency_minor_unit": "2",
    "currency_name": "US Dollar",
    "ds": "USA",
    "edgar": "",
    "fifa": "USA",
    "fips": "US",
    "geoname_id": "6252001",
    "gual": "259",
    "id": "America/Los_Angeles",
    "independent": "Yes",
    "ioc": "USA",
    "iso3166_1_alpha_2": "US",
    "iso3166_1_alpha_3": "USA",
    "itu": "USA",
    "languages": "en-US,es-US,haw,fr",
    "location": "34.05222,-118.24278",
    "marc": "xxu",
    "phone_prefix": "1",
    "tld": ".us",
    "un_m49_code": "840",
    "wmo": "US",
  },
}
`;

exports[`fetch info by ip address 219.93.183.103 1`] = `
Object {
  "city": "Kuala Selangor",
  "country": "Malaysia",
  "country_code": "MY",
  "datetime": Object {
    "date": "01/16/2018",
    "date_time": "01/16/2018 13:10:10",
    "date_time_txt": "Tuesday, January 16, 2018 13:10:10",
    "date_time_wti": "Tue, 16 Jan 2018 13:10:10 +0800",
    "date_time_ymd": "2018-01-16T13:10:10+08:00",
    "day": "16",
    "day_abbr": "Tue",
    "day_full": "Tuesday",
    "day_wilz": "16",
    "dst": "false",
    "dst_observes": "true",
    "hour_12_wilz": "01",
    "hour_12_wolz": "1",
    "hour_24_wilz": "13",
    "hour_24_wolz": "13",
    "hour_am_pm": "pm",
    "minutes": "10",
    "month": "1",
    "month_abbr": "Jan",
    "month_days": "31",
    "month_full": "January",
    "month_wilz": "01",
    "offset_gmt": "+08:00",
    "offset_hours": "8",
    "offset_minutes": "480",
    "offset_seconds": "28800",
    "offset_tzab": "MYT",
    "offset_tzid": "Asia/Kuala_Lumpur",
    "seconds": "10",
    "time": "13:10:10",
    "timeday_gen": "afternoon",
    "timeday_spe": "early_afternoon",
    "week": "03",
    "year": "2018",
    "year_abbr": "18",
  },
  "ip": "219.93.183.103",
  "location": "3.35,101.25",
  "postal": "45400",
  "state": "Selangor",
  "state_code": "10",
  "timezone": Object {
    "capital": "Kuala Lumpur",
    "continent": "AS",
    "country_code": "MY",
    "country_name": "Malaysia",
    "currency_alpha_code": "MYR",
    "currency_code": "458",
    "currency_country_name": "MALAYSIA",
    "currency_minor_unit": "2",
    "currency_name": "Malaysian Ringgit",
    "ds": "MAL",
    "edgar": "N8",
    "fifa": "MAS",
    "fips": "MY",
    "geoname_id": "1733045",
    "gual": "153",
    "id": "Asia/Kuala_Lumpur",
    "independent": "Yes",
    "ioc": "MAS",
    "iso3166_1_alpha_2": "MY",
    "iso3166_1_alpha_3": "MYS",
    "itu": "MLA",
    "languages": "ms-MY,en,zh,ta,te,ml,pa,th",
    "location": "3.16666,101.7",
    "marc": "my",
    "phone_prefix": "60",
    "tld": ".my",
    "un_m49_code": "458",
    "wmo": "MS",
  },
}
`;

exports[`fetch info by ip address 2601:646:103:3170:e5e4:1b28:f1cc:6e74 1`] = `
Object {
  "city": "San Francisco",
  "country": "United States",
  "country_code": "US",
  "datetime": Object {
    "date": "01/15/2018",
    "date_time": "01/15/2018 21:10:09",
    "date_time_txt": "Monday, January 15, 2018 21:10:09",
    "date_time_wti": "Mon, 15 Jan 2018 21:10:09 -0800",
    "date_time_ymd": "2018-01-15T21:10:09-08:00",
    "day": "15",
    "day_abbr": "Mon",
    "day_full": "Monday",
    "day_wilz": "15",
    "dst": "false",
    "dst_observes": "true",
    "hour_12_wilz": "09",
    "hour_12_wolz": "9",
    "hour_24_wilz": "21",
    "hour_24_wolz": "21",
    "hour_am_pm": "pm",
    "minutes": "10",
    "month": "1",
    "month_abbr": "Jan",
    "month_days": "31",
    "month_full": "January",
    "month_wilz": "01",
    "offset_gmt": "-08:00",
    "offset_hours": "-8",
    "offset_minutes": "-480",
    "offset_seconds": "-28800",
    "offset_tzab": "PST",
    "offset_tzid": "America/Los_Angeles",
    "seconds": "09",
    "time": "21:10:09",
    "timeday_gen": "evening",
    "timeday_spe": "evening",
    "week": "03",
    "year": "2018",
    "year_abbr": "18",
  },
  "ip": "2601:646:103:3170:e5e4:1b28:f1cc:6e74",
  "location": "37.7957,-122.4209",
  "postal": "94109",
  "state": "California",
  "state_code": "CA",
  "timezone": Object {
    "capital": "Washington",
    "continent": "NA",
    "country_code": "US",
    "country_name": "United States of America",
    "currency_alpha_code": "USD",
    "currency_code": "840",
    "currency_country_name": "UNITED STATES",
    "currency_minor_unit": "2",
    "currency_name": "US Dollar",
    "ds": "USA",
    "edgar": "",
    "fifa": "USA",
    "fips": "US",
    "geoname_id": "6252001",
    "gual": "259",
    "id": "America/Los_Angeles",
    "independent": "Yes",
    "ioc": "USA",
    "iso3166_1_alpha_2": "US",
    "iso3166_1_alpha_3": "USA",
    "itu": "USA",
    "languages": "en-US,es-US,haw,fr",
    "location": "34.05222,-118.24278",
    "marc": "xxu",
    "phone_prefix": "1",
    "tld": ".us",
    "un_m49_code": "840",
    "wmo": "US",
  },
}
`;
